Bug 508465 - New highlight for files in dolphin breaks styling with other themes (like Oxygen)
Summary: New highlight for files in dolphin breaks styling with other themes (like Oxy...
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 25.08.0
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: Akseli Lahtinen
URL:
Keywords:
: 508404 (view as bug list)
Depends on:
Blocks:
 
Reported: 2025-08-19 11:56 UTC by Pablo Alonso
Modified: 2026-03-29 19:16 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Dolphin now with breeze (25.26 KB, image/png)
2025-08-19 11:56 UTC, Pablo Alonso
Details
Dolphin now with oxygen (30.46 KB, image/png)
2025-08-19 11:57 UTC, Pablo Alonso
Details
PCManFM with Oxygen (41.53 KB, image/png)
2025-08-19 12:03 UTC, Pablo Alonso
Details
PCManFM with Breeze (36.67 KB, image/png)
2025-08-19 12:04 UTC, Pablo Alonso
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Pablo Alonso 2025-08-19 11:56:25 UTC
Created attachment 184245 [details]
Dolphin now with breeze

SUMMARY
The new highlighting for files in dolphin introduced in this commit effectively hardcodes the style of the highlight, making it unthemable for other themes like Oxygen

STEPS TO REPRODUCE
1. Update to latest dolphin
2. Highlight a file with Breeze theme
3. Change theme to Oxygen
4. Highlight the file again
5. Observe that the styling doesn't change for the highlighting

OBSERVED RESULT

The style of the highlight doesn't change, it still looks rounded and flat like the breeze style.

EXPECTED RESULT

The style should be what is expected for the Oxygen theme

SOFTWARE/OS VERSIONS
KDE Plasma Version: 6.4.4
KDE Frameworks Version: 6.17.0
Qt Version: 6.9.1
Kernel Version: 6.16.1-arch1-1 (64-bit)
Graphics Platform: Wayland

ADDITIONAL INFORMATION

I have attached some images to illustrate the problem. I use PCManFM QT instead of qt as the "before" image because I can't rollback dolphin
Comment 1 Pablo Alonso 2025-08-19 11:57:33 UTC
Created attachment 184247 [details]
Dolphin now with oxygen
Comment 2 Pablo Alonso 2025-08-19 12:01:59 UTC
This is the commit that changed the selection effect: https://invent.kde.org/system/dolphin/-/commit/c1e71289082ec7416ac19c822393ea70f63d1b75
Comment 3 Pablo Alonso 2025-08-19 12:03:04 UTC
Created attachment 184248 [details]
PCManFM with Oxygen
Comment 4 Pablo Alonso 2025-08-19 12:04:00 UTC
Created attachment 184249 [details]
PCManFM with Breeze
Comment 5 Akseli Lahtinen 2025-08-28 13:36:10 UTC
I can confirm it's an issue, sadly there's not much we can do about it since we draw the focus effect in Dolphin and not through Breeze.
Alternative solution would be modifying Breeze itself to have this new focus style, but that can cause other problems...

So for now I have no solution, sorry.

Operating System: Fedora Linux 42
KDE Plasma Version: 6.4.80
KDE Frameworks Version: 6.18.0
Qt Version: 6.9.1
Kernel Version: 6.15.10-200.fc42.x86_64 (64-bit)
Graphics Platform: Wayland
Processors: 12 × AMD Ryzen 5 3600 6-Core Processor
Memory: 16 GiB of RAM (15.5 GiB usable)
Graphics Processor: AMD Radeon RX 6600
Comment 6 pallaswept 2025-09-17 01:39:31 UTC
Is my bug a dupe of this? https://bugs.kde.org/show_bug.cgi?id=508404
Comment 7 Akseli Lahtinen 2025-09-17 07:44:55 UTC
*** Bug 508404 has been marked as a duplicate of this bug. ***
Comment 8 Akseli Lahtinen 2025-09-17 07:45:25 UTC
(In reply to pallaswept from comment #6)
> Is my bug a dupe of this? https://bugs.kde.org/show_bug.cgi?id=508404

Indeed it was, thanks for letting us know. :)
Comment 9 pallaswept 2025-09-19 11:54:56 UTC
(In reply to Akseli Lahtinen from comment #5)
> So for now I have no solution, sorry.

Hi Akseli,

I saw this issue https://invent.kde.org/teams/vdg/issues/-/issues/94#note_1303588 and I thought it might be better for me to discuss it here first. 

It seems to me that this shouldn't be rolled out across all the KDE apps if it breaks theming. Maybe we can find some solution here first.

I was thinking perhaps there could be some global settings for the selector appearance or something? Do you have any ideas?
Comment 10 Akseli Lahtinen 2025-09-23 09:24:34 UTC
> I was thinking perhaps there could be some global settings for the selector appearance or something? Do you have any ideas?

Hi, yes, I don't want to break theming either. :D

My current potential solutions are:
1. Instead of making the focus styling change in Dolphin, make it in Breeze
  - This however can cause bad things happening and things breaking and mass hysteria, due to how most apps expect the focus to look like
2. In apps that use this new style, we check if we're using Breeze or not, and if we're using Breeze, do our fancy custom painting
  - Otherwise do as we have always done
3. Wait for Union to fix it:tm:

I'm not sure which route to go here. Changing it in Breeze would make the most sense, but I'm bit worried how much stuff it might break.
Might be worth a try though.

The second one is safer but I do not like having custom code for one style. 

And third requires patience :)
Comment 11 pallaswept 2025-09-23 10:17:30 UTC
Hmm, that's a tough one! 
I can see that this is already in very capable hands so whichever path you choose, I am confident it will go well, and I will just exercise patience :D
Of course, if there is anything at all which I could do to help, please do let me know. Otherwise I will just stay out of the way.

Thanks Akseli!!
Comment 12 Akseli Lahtinen 2025-09-23 15:05:24 UTC
(In reply to pallaswept from comment #11)
> Hmm, that's a tough one! 
> I can see that this is already in very capable hands so whichever path you
> choose, I am confident it will go well, and I will just exercise patience :D
> Of course, if there is anything at all which I could do to help, please do
> let me know. Otherwise I will just stay out of the way.
> 
> Thanks Akseli!!

No worries, let me know if you have further ideas. (Or anyone else who lurks in this bug report!)

Believe me, I want this fixed too. It just needs a good approach.
Comment 13 pallaswept 2026-03-21 09:14:30 UTC
This problem appears to be spreading. https://invent.kde.org/plasma/libplasma/-/commit/3b8f456614755749785ed84d7588ae2bfb21f750
Comment 14 Akseli Lahtinen 2026-03-22 02:31:30 UTC
(In reply to pallaswept from comment #13)
> This problem appears to be spreading.
> https://invent.kde.org/plasma/libplasma/-/commit/
> 3b8f456614755749785ed84d7588ae2bfb21f750

Er, what problem? Those are just SVG files, one can modify them if they wish.
Comment 15 Filip Fila 2026-03-22 08:41:43 UTC
The new highlights look better and I do understand wanting to improve looks. But bypassing kstyle to hardcode Breeze visuals directly in a core KDE app is not the right approach.

It would be acceptable if the underlying code was modified and that it required adaptations that other styles then needed to implement. But this hardcodes the appearance in a way that other styles like Oxygen simply can't override.

Option 1 from comment #10 is the right approach. Yes, it carries some risk of breakage, but that's a solvable problem and exactly the kind of thing that belongs in a style. Hardcoding visual behavior in application code because it's easier than fixing it in the right place is how we end up with theming that's increasingly Breeze-locked in practice.

I'd be happy to help test any changes made through the kstyle path if that's useful.
Comment 16 Akseli Lahtinen 2026-03-22 11:40:42 UTC
You are in luck, there is MR to solve this. But it will likely have to wait for Plasma 6.7.

https://invent.kde.org/system/dolphin/-/merge_requests/1194
Comment 17 Akseli Lahtinen 2026-03-29 19:16:04 UTC
Git commit 61b6e173f2647e885814f5c11f9861e7bb9144c2 by Akseli Lahtinen.
Committed on 29/03/2026 at 19:16.
Pushed by akselmo into branch 'master'.

KItemListWidget: Use primitives instead of custom painting

We should avoid custom painting since that will cause issues with
Union and other styles. We however still use the old hardcoded painting
for Breeze style, which can be removed when Breeze 6.8 is released.

For other styles, we draw using the primitives the QStyle provides.

Also make the icon items less wider for better information density.
Related: bug 508294

M  +48   -30   src/kitemviews/kitemlistwidget.cpp
M  +1    -1    src/views/dolphinitemlistview.cpp

https://invent.kde.org/system/dolphin/-/commit/61b6e173f2647e885814f5c11f9861e7bb9144c2