KItemListWidget: Use primitives instead of custom painting

We should avoid custom painting since that will cause issues with
Union and other styles. We however still use the old hardcoded painting
for Breeze style, which can be removed when Breeze 6.8 is released.

For other styles, we draw using the primitives the QStyle provides.

Also make the icon items less wider for better information density.

CCBUG: 508294
BUG: 508465